# ivy-universal

./: .bazelrc  .gitignore  BAZEL.md  BUILD.bazel  README.md  TODO  WORKSPACE  angular.json  bazel-out  deployment.yaml  package-lock.json  package.json  rollup.config.js  server.ts  webpack.server.config.js
e2e/src/: app.e2e-spec.ts
scripts/: watch.js
server/: custom_elements_shim.ts  fetch.ts  renderer_factory.ts  server.ts  server_renderer_factory.ts
src/: BUILD.bazel  TODO  elements.server.ts  index.html  main.server.ts  main.ts  polyfills.ts  routes.ts  styles.css  tsconfig.app.json  tsconfig.server.json
src/app/: BUILD.bazel  app.component.html  app.module.ts  link_header.ts
src/app/components/greeting/: greeting.module.ts  greeting.ts
src/app/components/link-header/: link-header.module.ts  link-header.ts
src/app/components/mui-appbar/: mui-appbar.module.ts  mui-appbar.ts
src/app/components/product-alerts/: product-alerts.module.ts  product-alerts.ts
src/app/components/product-details/: product-details.module.ts  product-details.ts
src/app/components/product-list/: product-list.module.ts  product-list.ts
src/app/pages/about/: about.module.ts
src/app/pages/cart/: index.module.ts  index.ts
src/app/pages/index/: index.ts
src/app/pages/index/_id/: _id.module.ts  _id.ts
src/app/pages/index/index/: index.module.ts  index.ts
src/app/pages/posts/: _id.ts  posts.module.ts  posts.ts
src/app/pages/products/_id/: index.module.ts  index.ts
src/app/pages/shipping/: index.module.ts  index.ts
src/app/services/: counter.ts
src/app/shared/: product.ts  products.ts
src/app/shell/: shell.module.ts  shell.ts
src/app/state/: index.ts
src/app/state/actions/: cart.ts
src/app/state/store/: cart.ts
src/assets/: BUILD.bazel  item2.json  item3.json  ivy.json  products.json
src/bazel_experimental/: BUILD.bazel  b.js  c.js  index.js
src/components/: greeting-cmp.ts  greeting.ts  link-header.module.ts  link-header.ts
src/components/greeting-cmp/: greeting-cmp.module.ts  greeting-cmp.ts
src/components/link-header/: link-header.module.ts  link-header.ts
src/elements/: greeting.ts  link-header.ts
src/environments/: BUILD.bazel
src/lib/data-cache/: BUILD.bazel  element.ts  index.ts
src/lib/elements/: BUILD.bazel  angular-ivy-bits.ts  bootstrap.ts  create-custom-element.ts  element-strategy.ts  ivy-strategy-factory.ts  register-custom-element.ts  utils.ts
src/lib/ivy-route-recognizer/: BUILD.bazel  route-recognizer.ts
src/lib/ivy-route-recognizer/route-recognizer/: dsl.ts  normalizer.ts
src/lib/modules/: ngfor.module.ts  ngif.module.ts
src/lib/photon/: initial-data.ts  store.ts
src/lib/rehydration/: BUILD.bazel  rehydration_renderer.ts
src/lib/router/: BUILD.bazel  router.ts
src/lib/router-impl/: BUILD.bazel  router.ts
src/lib/runtime/: BUILD.bazel  index.ts
src/lib/rxjs-lite/: BUILD.bazel  index.ts
src/lib/server/: BUILD.bazel  custom_elements_shim.ts  fetch.ts  server_renderer_factory.ts
src/lib/store/: index.ts
src/lib/tsaction/: BUILD.bazel  event_contract.ts
src/lib/utils/: BUILD.bazel  lview.ts  patch-append-insert.ts  utils.ts
src/models/: Items.ts
src/pages/: about.ts  index.ts
src/pages/index/: index.module.ts  index.ts
src/services/: counter.ts
src/shell/: shell.ts
