load("@npm_bazel_typescript//:defs.bzl", "ts_library", "ts_config")
load("@build_bazel_rules_nodejs//:defs.bzl", "nodejs_binary", "rollup_bundle")
load("@build_bazel_rules_nodejs//internal/web_package:web_package.bzl", "web_package")
load("@io_bazel_rules_docker//container:container.bzl", "container_image")
load("@io_bazel_rules_docker//nodejs:image.bzl", "nodejs_image")

package(default_visibility=["//:__subpackages__"])

ts_config(
    name = "tsconfig-server",
    src = "tsconfig.server.json",
    deps = ["//:tsconfig.json", "//src:tsconfig.app.json"]
)

ts_config(
    name = "tsconfig-app",
    src = "tsconfig.app.json",
    deps = ["//:tsconfig.json"]
)

ts_library(
    name = "routes",
    srcs = ["routes.ts"],
    deps = ["//src/lib/router"],
)

ts_library(
    name = "server_lib",
    srcs = glob(["*.server.ts"]),
    tsconfig = ":tsconfig-server",
    deps = [
        "@npm//@types",
        "@npm//express",
        "@npm//ivy-domino",
        "@npm//tslib",
        "//src/environments",
        "//src/lib/server",
        "//src/app",
        ":routes",
    ],
)

ts_library(
    name = "client_lib",
    srcs = ["main.ts"],
    tsconfig = ":tsconfig-server",
    deps = [
        "@npm//@types",
        "@npm//tslib",
        "//src/environments",
        "//src/lib/elements",
        "//src/lib/tsaction",
        "//src/lib/router",
        "//src/lib/utils",
        "//src/app",
        ":routes",
    ],
)

rollup_bundle(
    name = "bundle",
    entry_point = "src/main",
    additional_entry_points = [
        "src/app/pages/about/about",
    ],
    deps = [
        ":client_lib",
        "@npm//@angular/common",
        "@npm//@angular/core",
        "@npm//@angular/platform-browser",
        "@npm//rxjs",
    ],
)

web_package(
    name = "package",
    index_html = "index.html",
    assets = [
        ":bundle.min.mjs",
    ],
    data = [
        ":bundle",
    ],
)

SERVING_DATA = [
        ":package",
        ":server_lib",
        # TODO(alexeagle): why is this needed but express isn't?
        "@npm//ivy-domino",
        "//src/lib/elements",
    ]

nodejs_binary(
    name = "server",
    data = SERVING_DATA,
    entry_point = "ivy_universal/src/main.server.js",    
)


nodejs_image(
    name = "server_image",
    data = SERVING_DATA,
    entry_point = "ivy_universal/src/main.server.js",
    node_modules = "@npm//:node_modules",
)

container_image(
    name = "image",
    base = ":server_image",
    workdir = "/app/src/server_image.binary.runfiles/ivy_universal",
)