load("@npm_angular_bazel//:index.bzl", "ng_module")
load("@npm_angular_bazel//src:ng_rollup_bundle.bzl", "ng_rollup_bundle")

package(default_visibility=["//:__subpackages__"])

ng_module(
    name = "app",
    srcs = glob(["**/*.ts"]),
    tsconfig = "//src:tsconfig-app",
    type_check = False,
    deps = [
        "@npm//@angular/core",
        "@npm//@angular/common",
    ],
)
