load("@npm_bazel_typescript//:defs.bzl", "ts_library")

package(default_visibility=["//:__subpackages__"])

ts_library(
    name = "router",
    srcs = glob(["*.ts"]),
    tsconfig = "//src:tsconfig-app",
    deps = [
        "//src/lib/ivy-route-recognizer",
        "//src/lib/tsaction",
        "//src/lib/utils",
    ],
)
